--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
         <!--<item name="colorPrimary">@color/colorPrimary</item>-->
         <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
@@ -16,14 +16,21 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark"/>
 
     <style name="AppTheme.Settings" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.Dialog" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">?contextColor</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowCloseOnTouchOutside">false</item>
+    </style>
+
+    <style name="AppTheme.Dialog.Offline" parent="Theme.AppCompat.Dialog">
+        <item name="colorAccent">?contextColor</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">?primaryBackgroundColor</item>
         <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 
@@ -43,5 +50,7 @@
     <style name="ImageTable.Text">
         <item name="android:gravity">center</item>
     </style>
+
+    <style name="HorizontalProgressBar" parent="Base.Widget.AppCompat.ProgressBar.Horizontal" />
 
 </resources>
