--- a/app/src/main/res/values/theme_attributes.xml
+++ b/app/src/main/res/values/theme_attributes.xml
@@ -4,6 +4,7 @@
     <attr name="contextColor50p" format="color" />
     <attr name="contextColor25p" format="color" />
     <attr name="contextColorText" format="color" />
+    <attr name="contextColorText2" format="color" />
     <attr name="primaryTextColor" format="color" />
     <attr name="primaryBackgroundColor" format="color" />
     <attr name="secondaryBackgroundColor" format="color" />
