--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
         <item name="android:windowBackground">@color/black</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorHint">@color/grey</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
