--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,14 +22,14 @@
     <style name="AppTheme.Settings" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.Dialog" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">?contextColor</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 
     <style name="AppTheme.Dialog.Offline" parent="Theme.AppCompat.Dialog">
-        <item name="colorAccent">?contextColor</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">?primaryBackgroundColor</item>
         <item name="android:windowCloseOnTouchOutside">false</item>
