--- a/app/src/main/res/layout/item_main_list.xml
+++ b/app/src/main/res/layout/item_main_list.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:textColor="?attr/subjectColor"
             android:textSize="?attr/subjectTextSize"
-            android:minHeight="?attr/subjectTextSize"
+            android:minHeight="?attr/subjectTextMinHeight"
             tools:text="@string/dummy_long"/>
 
         <RelativeLayout
