--- a/app/src/main/res/layout/item_sub_list.xml
+++ b/app/src/main/res/layout/item_sub_list.xml
@@ -9,19 +9,18 @@
               android:padding="?listItemPadding"
               tools:ignore="RtlHardcoded">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_marginBottom="@dimen/gap_small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/author"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@+id/time"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="1"
             android:textColor="?attr/authorColor"
             android:textSize="?attr/authorTextSize"
             tools:text="@string/dummy_long"/>
@@ -30,11 +29,10 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:textColor="?attr/dateColor"
             android:textSize="?attr/dateTextSize"
             tools:text="20:28:17 25.11."/>
-    </RelativeLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/subject"
