--- a/app/src/main/res/drawable-v21/item_list_background_theme_black.xml
+++ b/app/src/main/res/drawable-v21/item_list_background_theme_black.xml
@@ -5,9 +5,18 @@
         android:minLevel="0">
         <ripple android:color="@color/yellow_orange">
             <item>
-                <shape>
-                    <solid android:color="?primaryBackgroundColor"/>
-                </shape>
+                <selector>
+                    <item android:state_selected="true">
+                        <shape>
+                            <solid android:color="?selectedBackgroundColor"/>
+                        </shape>
+                    </item>
+                    <item>
+                        <shape>
+                            <solid android:color="?primaryBackgroundColor"/>
+                        </shape>
+                    </item>
+                </selector>
             </item>
         </ripple>
     </item>
@@ -16,9 +25,18 @@
         android:minLevel="1">
         <ripple android:color="@color/yellow_orange">
             <item>
-                <shape>
-                    <solid android:color="?secondaryBackgroundColor"/>
-                </shape>
+                <selector>
+                    <item android:state_selected="true">
+                        <shape>
+                            <solid android:color="?selectedBackgroundColor"/>
+                        </shape>
+                    </item>
+                    <item>
+                        <shape>
+                            <solid android:color="?secondaryBackgroundColor"/>
+                        </shape>
+                    </item>
+                </selector>
             </item>
         </ripple>
     </item>
