--- a/app/src/main/res/drawable/item_list_background_theme_black.xml
+++ b/app/src/main/res/drawable/item_list_background_theme_black.xml
@@ -9,6 +9,11 @@
                     <solid android:color="@color/black_yellow_pressed"/>
                 </shape>
             </item>
+            <item android:state_selected="true">
+                <shape>
+                    <solid android:color="@color/yellow_orange_25p"/>
+                </shape>
+            </item>
             <item>
                 <shape>
                     <solid android:color="@color/black"/>
@@ -24,6 +29,11 @@
             <item android:state_pressed="true">
                 <shape>
                     <solid android:color="@color/dark_yellow_pressed"/>
+                </shape>
+            </item>
+            <item android:state_selected="true">
+                <shape>
+                    <solid android:color="@color/yellow_orange_25p"/>
                 </shape>
             </item>
             <item>
