--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
 
+    <dimen name="gap_hairline">1dp</dimen>
     <dimen name="gap_tiny">2dp</dimen>
     <dimen name="gap_small">4dp</dimen>
     <dimen name="gap_normal">8dp</dimen>
