--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="yellow_orange_25p">#40FFA710</color>
     <color name="rating_good">#0a0</color>
     <color name="rating_bad">#d00</color>
+    <color name="transparent">#0000</color>
 
     <color name="item_state_own">#00FFFF</color>
     <color name="item_state_has_msg">#FF0000</color>
