Update PostFragment to have it as dialog for tablets

--- a/app/src/main/res/layout/widget_post_message.xml
+++ b/app/src/main/res/layout/widget_post_message.xml
@@ -71,6 +71,17 @@
             tools:ignore="NewApi"/>
 
         <ImageButton
+            android:id="@+id/add"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingRight="@dimen/gap_normal"
+            android:paddingLeft="@dimen/gap_normal"
+            android:background="?imageButtonBackground"
+            android:src="@drawable/ic_add"
+            tools:visibility="visible"/>
+
+        <ImageButton
             android:id="@+id/send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
