Update background for tablets

--- a/app/src/main/res/drawable-v21/item_list_background_theme_black.xml
+++ b/app/src/main/res/drawable-v21/item_list_background_theme_black.xml
@@ -7,9 +7,18 @@
             <item>
                 <selector>
                     <item android:state_selected="true">
-                        <shape>
-                            <solid android:color="?selectedBackgroundColor"/>
-                        </shape>
+                        <layer-list>
+                            <item>
+                                <shape>
+                                    <solid android:color="?primaryBackgroundColor"/>
+                                </shape>
+                            </item>
+                            <item>
+                                <shape>
+                                    <solid android:color="?selectedBackgroundColor"/>
+                                </shape>
+                            </item>
+                        </layer-list>
                     </item>
                     <item>
                         <shape>
@@ -27,9 +36,18 @@
             <item>
                 <selector>
                     <item android:state_selected="true">
-                        <shape>
-                            <solid android:color="?selectedBackgroundColor"/>
-                        </shape>
+                        <layer-list>
+                            <item>
+                                <shape>
+                                    <solid android:color="?secondaryBackgroundColor"/>
+                                </shape>
+                            </item>
+                            <item>
+                                <shape>
+                                    <solid android:color="?selectedBackgroundColor"/>
+                                </shape>
+                            </item>
+                        </layer-list>
                     </item>
                     <item>
                         <shape>
