--- a/app/src/main/res/layout/widget_post_message.xml
+++ b/app/src/main/res/layout/widget_post_message.xml
@@ -64,6 +64,17 @@
             android:padding="@dimen/gap_normal"
             android:src="@drawable/ic_camera"/>
 
+        <Button
+            android:id="@+id/giphy"
+            android:enabled="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?imageButtonBackground"
+            android:minWidth="@dimen/button_min_width"
+            android:padding="@dimen/gap_normal"
+            android:textColor="@color/colorAccent"
+            android:text="GIF"/>
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
