--- a/app/src/main/res/layout/widget_post_message.xml
+++ b/app/src/main/res/layout/widget_post_message.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?imageButtonBackground"
-            android:minWidth="@dimen/button_min_width"
+            android:minWidth="@dimen/button_min_size"
             android:padding="@dimen/gap_normal"
             android:textColor="@color/colorAccent"
             android:text="GIF"/>
