Update UI loading dialog

--- a/app/src/main/res/layout/dialog_offline.xml
+++ b/app/src/main/res/layout/dialog_offline.xml
@@ -56,8 +56,9 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <TextView
             android:layout_width="0dp"
@@ -86,6 +87,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="bottom"
         android:showDividers="middle"
         android:divider="@drawable/divider_vertical_transparent_normal"
         android:orientation="horizontal">
