--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.app.FragmentTabHost
+<androidx.fragment.app.FragmentTabHost
     android:id="@android:id/tabhost"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -36,4 +36,4 @@
             tools:background="#8F00"
             />
     </LinearLayout>
-</android.support.v4.app.FragmentTabHost>
+</androidx.fragment.app.FragmentTabHost>
