--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="is_tablet">false</bool>
+    <string name="default_notification_channel_id">Zumpa</string>
 </resources>
